c/examples/writing-a-c-compiler-tests/tests/chapter_18/valid/no_structure_parameters/semantic_analysis/cast_struct_to_void.c
/* You can cast a struct to void,
 * even though you can't cast it to any other type
 * */

struct s {
    int a;
    int b;
};

int main(void) {
    struct s x = {1, 2};
    (void)x;  // just make sure this doesn't cause a type error
    return 0;
}