c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/labeled_struct_decl.c
// Because a structure declaration isn't a statement, it can't appear right
// after a label. NOTE: this is valid as of C23
int main(void) {
foo:
    struct s {
        int a;
    };
    return 0;
}